--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -54,7 +54,7 @@ set( SRC_MEMORY
 	${FWDIR}/memory/CacheHandler.cpp
 	${FWDIR}/memory/BitfieldCache.cpp
 	${FWDIR}/memory/CacheManager.cpp
-	${FWDIR}/memory/cache_ptr.cpp
+	${FWDIR}/memory/CachePtr.cpp
 )
 
 set( SRC_CONFIG
