--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -75,7 +75,7 @@ set( SRC_CONFIG
 set( SRC_MIDI
 	${FWDIR}/midi/MidiInputHandle.cpp	
 	${FWDIR}/midi/MidiDevice.cpp
-#	${FWDIR}/midi/MidiHandler.cpp
+	${FWDIR}/midi/MidiHandler.cpp
 )
 
 if(ALSA_MIDI)
