--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -108,6 +108,7 @@ set( SRC_HELPERS
 set( SRC_COMPONENT
 	${FWDIR}/component/Linkable.cpp
 	${FWDIR}/component/Unit.cpp
+	${FWDIR}/component/UnitLoader.cpp
 	${FWDIR}/component/Rack.cpp
 )
 
