Add compilable ThreadPool

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -91,7 +91,7 @@ set( SRC_TELEMETRY
 
 set( SRC_THREADS
 	${FWDIR}/threads/WorkerThread.cpp
-	#${FWDIR}/threads/ThreadPool.cpp
+	${FWDIR}/threads/ThreadPool.cpp
 	#${FWDIR}/threads/PackagePump.cpp
 	#${FWDIR}/threads/RackQueue.cpp
 )
