--- a/framework/include/framework/fwcommon.hpp.in
+++ b/framework/include/framework/fwcommon.hpp.in
@@ -21,6 +21,6 @@ typedef float PcmSample;
 
 #define DEVBUILD @DEVBUILD@
 #define ALSA_MIDI @ALSA_MIDI@
-#define HOSTING_LV2 @ALSA_MIDI@
+#define HOSTING_LV2 @HOSTING_LV2@
 
 #endif
