Objects can derive from task_utility
If an object needs to have access to the thread
pool, it can use the general interface task_utility
to give it functionality for add packages to
the package queue

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -75,6 +75,7 @@ set( SRC_THREADS
 	${FWDIR}/threads/pool.cpp
 	${FWDIR}/threads/pump.cpp
 	${FWDIR}/threads/queue.cpp
+	${FWDIR}/threads/task_utility.cpp
 )
 
 set( SRC_HELPERS
