Start aligning basic.cfg

--- a/test/catch/basic.cfg
+++ b/test/catch/basic.cfg
@@ -10,16 +10,13 @@
 "rack": {
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
-		{ "from" : "rack", "plug" : "ac1", "to" : "main", "jack" : "power" },
-		{ "from" : "main", "plug": "audio_out", "to" : "masterout", "jack": "audio" }
+		{ "from" : "rack", "plug" : "ac1", "to" : "phi", "jack" : "power" },
+		{ "from" : "main", "plug": "audio", "to" : "tau", "jack": "audio_in" }
 	],
 
-	"main" : {
-		"unit" : "MainlineUnit",
-		"library": "./units/MainlineUnit.rso",
-		"config" : {
-			"test_config" : "test_value"
-		},
+	"phi" : {
+		"unit" : "PhiUnit",
+		"library": "./units/PhiUnit.rso",
 
 		"bindings" : {
 		"exported" : { "module": "LaunchControl" , "code":73 }
@@ -27,13 +24,11 @@
 
 	},
 
-	"masterout": {
-		"unit" : "OutputUnit",
-		"library" : "./units/OutputUnit.rso",
+	"tau": {
+		"unit" : "TauUnit",
+		"library" : "./units/TauUnit.rso",
 		"config": {
-			"configuration" : "2048",
-			"configuration2" : "foobar",
-			"unit_buffer" : "4096"
+			"test_config" : "808"
 		}
 	}
 
