Update tests for document check

--- a/test/catch/basic.cfg
+++ b/test/catch/basic.cfg
@@ -16,7 +16,7 @@
 
 	"phi" : {
 		"unit" : "PhiUnit",
-		"library": "./units/PhiUnit.rso",
+		"library": "./units03/TestUnits.rso",
 
 		"bindings" : {
 		"exported" : { "module": "LaunchControl" , "code":73 }
@@ -26,9 +26,10 @@
 
 	"tau": {
 		"unit" : "TauUnit",
-		"library" : "./units/TauUnit.rso",
+		"library" : "./units03/TestUnits.rso",
 		"config": {
-			"test_config" : "808"
+			"test_config" : "808",
+			"nowt" : "nada"
 		}
 	}
 
