Fix multiple problems

--- a/test/catch/basic.cfg
+++ b/test/catch/basic.cfg
@@ -15,8 +15,8 @@
 	],
 
 	"phi" : {
-		"unit" : "PhiUnit",
-		"library": "./units03/TestUnits.rso",
+		"unit" : "Phi",
+		"library": "./unit03/TestUnits.rso",
 
 		"bindings" : {
 		"exported" : { "module": "LaunchControl" , "code":73 }
@@ -25,8 +25,8 @@
 	},
 
 	"tau": {
-		"unit" : "TauUnit",
-		"library" : "./units03/TestUnits.rso",
+		"unit" : "Tau",
+		"library" : "./unit03/TestUnits.rso",
 		"config": {
 			"test_config" : "808",
 			"nowt" : "nada"
