Test dasiychain connections in assembler

--- a/test/catch/basic.cfg
+++ b/test/catch/basic.cfg
@@ -11,7 +11,7 @@
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
 		{ "from" : "rack", "plug" : "ac1", "to" : "phi", "jack" : "power" },
-		{ "from" : "main", "plug": "audio", "to" : "tau", "jack": "audio_in" }
+		{ "from" : "phi", "plug": "audio", "to" : "tau", "jack": "audio_in" }
 	],
 
 	"phi" : {
