--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project (libstrangeio)
 
 # Build
-set( GCC_CFLAG "-std=c++11 -fPIC -shared -Wall" )
+set( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++11 -fPIC -shared -Wall" )
 set( GCC_LDFLAGS "-wl,-soname,libstrangeio.so" )
 
 set( DEVBUILD "0" CACHE DEVBUILD "Expose development and testing code" )
@@ -128,17 +128,15 @@ set( SRC_ALL
 	${SRC_HOSTING}
 )
 
-if(DEVBUILD)
-	set( GCC_CFLAG "${GCC_CFLAG} -ggdb" )
-endif(DEVBUILD)
 
 # Integration
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_CFLAG}" )
-set( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_CFLAG}" )
+set( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_CXX_FLAGS}" )
 set( CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set( CMAKE_INSTALL_PREFIX "/usr/lib" )
+
 add_library( strangeio SHARED ${SRC_ALL})
-target_link_libraries ( strangeio  ${EXTRA_LIBS} )
+target_link_libraries( strangeio ${EXTRA_LIBS})
+
 install( FILES libstrangeio.so DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 add_custom_command(TARGET strangeio
