Add stop and rack dtor

--- a/test/linux.cfg
+++ b/test/linux.cfg
@@ -14,12 +14,12 @@
 
 	"theta" : {
 		"unit" : "Theta",
-		"library": "./unit03/Rigging.rso"
+		"library": "./unit03/LinuxRig.rso"
 	},
 
 	"zeta": {
 		"unit" : "Zeta",
-		"library" : "./unit03/Rigging.rso"
+		"library" : "./unit03/LinuxRig.rso"
 	}
 
 }
