Implement a single function setup routine
This enables a quick creation of a rack system
with a configuration loaded.

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -82,6 +82,7 @@ set( SRC_THREADS
 set( SRC_ROUTINE
 	${FWDIR}/routine/sound.cpp
 	${FWDIR}/routine/midi.cpp
+	${FWDIR}/routine/system.cpp
 )
 
 set( SRC_COMPONENT
