Move utility management to own class
Rack now derives from utility container

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -81,6 +81,7 @@ set( SRC_COMPONENT
 	${FWDIR}/component/unit.cpp
         ${FWDIR}/component/mount.cpp
         ${FWDIR}/component/backend.cpp
+        ${FWDIR}/component/utility_container.cpp
 	${FWDIR}/component/rack.cpp
 
         ${FWDIR}/component/unit_loader.cpp
