Include the device in the test

--- a/test/linux.cfg
+++ b/test/linux.cfg
@@ -19,7 +19,10 @@
 
 	"zeta": {
 		"unit" : "Zeta",
-		"library" : "./unit03/LinuxRig.rso"
+		"library" : "./unit03/LinuxRig.rso",
+                "config" : {
+                    "device" : "strangeio"
+                }
 	}
 
 }
