Add abstraction for thread scheduling on the rack
The thread::scheduled abstraction enables automatic schedule settings
to be applied to a thread. Different code paths can enable platform
specific thread policy elevation while keeping the interface the same.

Currently only linux scheduling policy is implemented.

The schedule settings are defaulted to the
most basic scheduler parameters -- in linux this is SCHED_OTHER with
a zero priority.

The linux specific settings can be set in the cfg file under
system.linux_sys.sched_policy and system.linux_sys.sched_priority. The
configuration will enable the rack's thread to have those policies
applied but only if the user has the ability to elevate policies.

Also included is the test unit.

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -68,6 +68,7 @@ set( SRC_THREADS
 	${FWDIR}/threads/pump.cpp
 	${FWDIR}/threads/queue.cpp
 	${FWDIR}/threads/task_utility.cpp
+        ${FWDIR}/threads/scheduled.cpp
 )
 
 set( SRC_ROUTINE
