Add output handle for midi
The output handle will be used for piping messages to
the midi devices

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -48,7 +48,8 @@ set( SRC_CONFIG
 
 
 set( SRC_MIDI
-	${FWDIR}/midi/input_handle.cpp	
+	${FWDIR}/midi/input_handle.cpp
+        ${FWDIR}/midi/output_handle.cpp	
 	${FWDIR}/midi/device.cpp
 	${FWDIR}/midi/midi_handler.cpp
 )
