Add progress of midi output
The current setup allows a unit to specify a state which
can be fed to a midi controller to toggle an LED

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -48,6 +48,7 @@ set( SRC_CONFIG
 
 
 set( SRC_MIDI
+        ${FWDIR}/midi/led_toggle_utility.cpp
 	${FWDIR}/midi/input_handle.cpp
         ${FWDIR}/midi/output_handle.cpp	
 	${FWDIR}/midi/device.cpp
