Add log and CACHE_TRACKING to common header
CACHE_TRACKING allows tracking cache_ptrs through
the system -- this will help with debugging

--- a/framework/include/framework/fwcommon.hpp.in
+++ b/framework/include/framework/fwcommon.hpp.in
@@ -20,10 +20,12 @@
 #include <cstdint>
 #include "framework/routine/debug.hpp"
 #include "framework/exceptions.hpp"
+#include "framework/log/log.hpp"
 typedef float PcmSample;
 
 #define DEVBUILD @DEVBUILD@
 #define ALSA_MIDI @ALSA_MIDI@
 #define HOSTING_LV2 @HOSTING_LV2@
+#define CACHE_TRACKING @CACHE_TRACKING@
 
 #endif
