Add warning for when CACHE_TRACKING is enabled

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -6,7 +6,7 @@ set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++14 -shared -Wall" )
 set( GCC_LDFLAGS "-wl,-soname,libstrangeio.so" )
 
 set( DEVBUILD "0" CACHE DEVBUILD "Expose development and testing code" )
-set( CACHE_TRACKING "0" CACHE CACHE_TRACKING "Enable ability to track cache usage" )
+set( CACHE_TRACKING "0" CACHE CACHE_TRACKING "Enable ability to track cache usage through the system" )
 set( ALSA_MIDI "1" CACHE ALSA_MIDI "User ALSA as midi driver interface" )
 
 set( HOSTING_LV2 "0" CACHE LV2HOST "Include LV2 host platform" )
@@ -27,6 +27,10 @@ if(DEBUG_BUILD)
 	MESSAGE("Debug Build")
 	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g" )
 endif(DEBUG_BUILD)
+
+if( CACHE_TRACKING )
+    MESSAGE("CACHE_TRACKING enabled -- this results in heavy logging")
+endif(CACHE_TRACKING)
 
 # Libs
 include_directories("${PROJECT_SOURCE_DIR}/../" "${PROJECT_SOURCE_DIR}/include/")
